--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^7.0.3",
     "react-scripts": "^3.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
